User store only pair address